--- a/style.css
+++ b/style.css
@@ -118,9 +118,11 @@ footer{
     }
     nav{
         flex-direction: column;
-        justify-content: start;
+        /* justify-content: start; */
         max-width: 100%;
-    }
+        /* width: 50%; */
+        padding: 0;
+    } 
     footer{
         flex-direction: column;
         padding-top: 1rem;
@@ -143,6 +145,10 @@ footer{
         /* margin-left:-1rem; */
         font-size: 1rem;
         /* padding-right: 0.4rem; */
+        padding: 0;
+        /* width: 50%;
+         */
+         padding-bottom: 1rem;
     }
     .btn{
         margin-left: 25%;
@@ -157,7 +163,7 @@ footer{
         font-size:1rem;
     }
     img{
-        margin-left: 0.5rem;
+        margin-left: 0.2rem;
     }
     .box_b p{
         padding-top: 1.5rem;
